<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/auth_screen_padding_bottom"
        android:paddingEnd="@dimen/auth_screen_padding"
        android:paddingStart="@dimen/auth_screen_padding"
        android:paddingTop="@dimen/auth_screen_padding">

        <com.vouchify.vouchify.view.CustomImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/imv_logo" />

        <com.vouchify.vouchify.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/auth_content_title" />

        <com.vouchify.vouchify.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_description"
            android:textColor="@color/color_description_text"
            android:textSize="@dimen/auth_content_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edt_auth_bg"
            android:gravity="center"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/auth_edt_drawable_padding">

            <com.vouchify.vouchify.view.CustomImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_login_user" />

            <com.vouchify.vouchify.view.CustomEditText
                android:id="@+id/forgot_pw_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/please_enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edt_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/edt_text_size" />
        </LinearLayout>

        <com.vouchify.vouchify.view.CustomClickTextView
            android:id="@+id/forgot_pw_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_view_spacing"
            android:background="@drawable/btn_auth_bg"
            android:gravity="center"
            android:padding="@dimen/btn_padding"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>